# iscc-registry

./: .gitignore  LICENSE  README.md  pyproject.toml
iscc_registry/: __init__.py  cli.py  conn.py  deploy.py  observe.py  publish.py  registry.vy  tools.py  verify.py
iscc_registry/contract/: deploy.py  registry.vy
tests/: test_iscc_registry.py
