[tool.poetry]
name = "iscc-registry"
version = "0.1.0"
description = ""
authors = ["titusz <tp@py7.de>"]

[tool.poetry.dependencies]
python = "^3.6.1"
vyper = "^0.2.3"
web3 = "^5.11.1"
loguru = "^0.5.1"
iscc-cli = "^0.9.11"
base58 = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
black = "^19.10b0"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
